[gd_scene load_steps=10 format=2]

[ext_resource path="res://scripts/Static/Station.gd" type="Script" id=1]
[ext_resource path="res://scenes/Static/Station-spriteframe/Station-5-frame.tres" type="SpriteFrames" id=2]
[ext_resource path="res://assets/dynamic/station/black_station_foundation1.png" type="Texture" id=3]
[ext_resource path="res://assets/static/Rail/rail-v2.png" type="Texture" id=4]
[ext_resource path="res://audio/sfx/sfx_plus.wav" type="AudioStream" id=5]
[ext_resource path="res://audio/sfx/sfx_minus.wav" type="AudioStream" id=6]
[ext_resource path="res://audio/sfx/sfx_station_open.wav" type="AudioStream" id=7]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 3.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 16, 8 )

[node name="Station" type="Node2D"]
z_index = 100
script = ExtResource( 1 )

[node name="RailSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, 384 )
z_index = -100
z_as_relative = false
frames = SubResource( 1 )
playing = true

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, 6.174 )
z_index = -100
texture = ExtResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( -375.477, -18.7006 )
frames = ExtResource( 2 )
offset = Vector2( 375.477, 19.7006 )

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
margin_left = -48.0
margin_top = -48.0
margin_right = 48.0
margin_bottom = 48.0
color = Color( 1, 0.0823529, 0.0823529, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MiddleDoor" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="MiddleDoor"]
position = Vector2( 0, 8 )
shape = SubResource( 2 )

[node name="PlusSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )

[node name="MinusSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )
volume_db = -0.897

[node name="StationSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )

[connection signal="frame_changed" from="AnimatedSprite" to="." method="_on_AnimatedSprite_frame_changed"]
[connection signal="area_entered" from="MiddleDoor" to="." method="_on_MiddleDoor_area_entered"]
